Adding Google Maps support

--- a/maps/index.html
+++ b/maps/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <!-- Paste the Google API Key after '?key=' -->
+  <script src="https://maps.googleapis.com/maps/api/js?key="></script>
   <script src="./src/index.ts"></script>
 </body>
 
