--- a/maps/index.html
+++ b/maps/index.html
@@ -6,9 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maps</title>
+  <style>
+    #map {
+      position: fixed !important;
+      height: 100% !important;
+      width: 100% !important;
+    }
+  </style>
 </head>
 
 <body>
+  <div id="map"></div>
   <!-- Paste the Google API Key after '?key=' -->
   <script src="https://maps.googleapis.com/maps/api/js?key="></script>
   <script src="./src/index.ts"></script>
