--- a/stats/report.html
+++ b/stats/report.html
@@ -1,6 +1,6 @@
 
         <div>
           <h1>Analysis Output</h1>
-          <div>Team Chelsea won 19 games</div>
+          <div>Team Man City won 26 games</div>
         </div>
     
